# TradingBot

./: .dockerignore  .flake8  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  dev-requirements.txt  docker_ctl  docker_run.sh  install.py  install.sh  pyproject.toml  renovate.json  requirements.txt  run_docker.sh  setup.py  trading_bot.py  trading_bot_ctl
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  dependabot-auto-merge.yml
config/: config.json  trading_bot.toml
cron/: trading_bot_ctl
doc/: conf.py  index.rst
doc/source/: modules.rst  system.rst
docker/: Dockerfile  Dockerfile arm  Dockerfile-arm
docs/: BACKTESTING.md  conf.py  index.md  index.rst  system.md
docs/source/: modules.rst  system.rst
examples/: run_backtest.py  sample_data.csv
scripts/: AVInterface.py  IGInterface.py  StocksAutoTrader.py  Utils.py  main.py  trading_bot.py
scripts/Interfaces/: AVInterface.py  IGInterface.py
scripts/Strategies/: FAIG_iqr.py  SimpleMACD.py  Strategy.py
src/: TradingBot.py  Utils.py  main.py
src/Components/: AVInterface.py  Backtester.py  Configuration.py  IGInterface.py  MarketProvider.py  TimeProvider.py  Utils.py
src/Components/Broker/: AVInterface.py  AbstractInterfaces.py  Broker.py  BrokerFactory.py  IGInterface.py  YFinanceInterface.py
src/Interfaces/: AVInterface.py  Broker.py  IGInterface.py  Market.py  MarketHistory.py  MarketMACD.py  MarketProvider.py  Position.py
src/Strategies/: FAIG_iqr.py  SimpleMACD.py  Strategy.py  StrategyFactory.py  WeightedAvgPeak.py
src/Utility/: Utils.py
test/: test_backtest_integration.py  test_broker.py  test_configuration.py  test_ig_interface.py  test_market_provider.py  test_simple_boll_bands.py  test_simple_macd.py  test_strategy.py  test_strategy_factory.py  test_time_provider.py  test_trading_bot.py  test_utils.py  test_weighted_avg_peak.py
test/common/: MockComponents.py  MockRequests.py
test/test_data/: config.json  credentials.json  epics_list.txt  mock_av_daily.json  mock_av_weekly.json  mock_ig_account_details.json  mock_ig_market_info.json  mock_ig_positions.json  mock_macdext_buy.json  mock_macdext_sell.json  trading_bot.toml
test/test_data/alpha_vantage/: av_daily_boll_bands_buy.json  av_daily_boll_bands_sell.json  mock_macd_ext_hold.json
test/test_data/ig/: mock_account_details.json  mock_error.json  mock_historic_price.json  mock_login.json  mock_market_search.json  mock_navigate_markets_markets.json  mock_navigate_markets_nodes.json  mock_set_account.json  mock_watchlist.json  mock_watchlist_list.json
test/test_data/yfinance/: mock_history_day_max.json
tradingbot/: TradingBot.py  __init__.py  __main__.py  trading_bot.py
tradingbot/Components/: Backtester.py  Configuration.py  MarketProvider.py  TimeProvider.py  Utils.py  __init__.py
tradingbot/Components/Broker/: AVInterface.py  AbstractInterfaces.py  Broker.py  BrokerFactory.py  IGInterface.py  YFinanceInterface.py  __init__.py
tradingbot/Interfaces/: Market.py  MarketHistory.py  MarketMACD.py  Position.py  __init__.py
tradingbot/Strategies/: SimpleMACD.py  Strategy.py  StrategyFactory.py  WeightedAvgPeak.py  __init__.py
tradingbot/components/: __init__.py  backtester.py  config_model.py  configuration.py  market_provider.py  time_provider.py  utils.py
tradingbot/components/broker/: __init__.py  abstract_interfaces.py  av_interface.py  broker.py  factories.py  ig_interface.py  yf_interface.py
tradingbot/interfaces/: __init__.py  market.py  market_history.py  market_macd.py  position.py
tradingbot/strategies/: __init__.py  base.py  factories.py  simple_bollinger_bands.py  simple_macd.py  volume_profile.py  weighted_avg_peak.py
