[tool.poetry]
name = "TradingBot"
version = "2.0.0"
description = "Autonomous market trader based on custom strategies"
authors = ["Alberto Cardellini"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ilcardella/TradingBot"
documentation = "https://tradingbot.readthedocs.io/en/latest"
packages = [
    { include = "tradingbot" }
]
include = ["config/trading_bot.toml"]

[tool.poetry.dependencies]
python = ">= 3.7.1 < 3.11"
alpha-vantage = "^2.3.1"
govuk-bank-holidays = "^0.11"
pytz = "^2021.1"
requests = "^2.28.1"
yfinance = "^0.1.55"
toml = "^0.10.2"
pandas = "^1.3.5"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"
requests-mock = "^1.8.0"
pytest = "^6.2.2"
black = {version = "^21.12b0", allow-prereleases = true}
flake8 = "^3.8.4"
isort = "^5.7.0"
mypy = "^0.812"

[tool.poetry.scripts]
trading_bot = 'tradingbot:main'

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
line_length=88

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
