[tool.poetry]
name = "TradingBot"
version = "2.0.0"
description = "Autonomous market trader based on custom strategies"
authors = ["Alberto Cardellini"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ilcardella/TradingBot"
documentation = "https://tradingbot.readthedocs.io/en/latest"
packages = [
    { include = "tradingbot" }
]
include = ["config/trading_bot.toml"]

[tool.poetry.dependencies]
python = "^3.8"
alpha-vantage = "^2.3.1"
govuk-bank-holidays = "^0.13"
pytz = "^2023.3"
requests = "^2.31.0"
yfinance = "^0.1.90"
toml = "^0.10.2"
pandas = "^1.5.2"
scipy = "^1.7.3"

[tool.poetry.scripts]
trading_bot = 'tradingbot:main'

[tool.poetry.group.dev.dependencies]
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.0.0"
requests-mock = "^1.8.0"
pytest = "^7.2.0"
black = "^24.3.0"
flake8 = "^5.0.4"
isort = "^5.7.0"
mypy = "^1.7"
types-toml = "^0.10.8.1"
types-pytz = "^2022.6.0.1"
types-requests = "^2.28.11.5"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
line_length=88

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
