[project]
name = "tradingbot"
version = "2.0.0"
description = "Autonomous market trader based on custom strategies"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Alberto Cardellini" }
]
license = { text = "MIT" }
dependencies = [
    "alpha-vantage>=2.3.1",
    "backtesting>=0.4.0",
    "govuk-bank-holidays>=0.14",
    "pandas>=1.5.2",
    "pydantic>=2.0.0",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "scipy>=1.7.3",
    "toml>=0.10.2",
    "yfinance>=0.2.33",
]

[project.scripts]
trading_bot = "tradingbot:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.7",
    "pytest>=7.2.0",
    "requests-mock>=1.8.0",
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.0.0",
    "types-pytz>=2023.3.1.1",
    "types-requests>=2.28.11.5",
    "types-toml>=0.10.8.1",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["tradingbot"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.hatch.build.targets.wheel]
packages = ["tradingbot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
